--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -38,6 +38,15 @@
         {% block content %}
 
         <div id="div" class="container mt-5">
+
+        {% if messages %}
+            <div class="alert alert-primary" role="alert">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        {% endif %}
+
             <form  action="{% url 'home' %}" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="{{form.files_data.id_for_label}}"><h3 style="color:white ;">Prześlij pliki</h3> </label>
